<resources>
    <string name="app_name">AutoLibrary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_add_text">Добавление авто</string>
    <string name="car_name_text">Наименование</string>
    <string name="car_year">Год выпуска</string>
    <string name="car_engine_cap">Ёмкость двигателя</string>
    <string name="add_photo_text">Добавить фото</string>
    <string name="add_car_text">Сохранить авто</string>
    <string name="insert_date_text">Дата добавления</string>
    <string name="preference_title">Вернуть настройки по умолчанию</string>
    <string name="preference_summary">При возвращении настроек в исходное положение, сбросится платная подписка и вернутся пробные попытки на функции</string>
    <string name="settings_title">Настройки</string>
    <string name="search_text">Найти</string>
    <string name="buy_dialog_title">Купите подписку!</string>
    <string name="buy_dialog_description">С покупкой подписки все функции станут доступны без ограничений на период в месяц</string>
    <string name="buy_dialog_positive">Купить</string>
    <string name="buy_dialog_negative">Отмена</string>
    <string name="subscription_purchased">Подписка приобретена</string>
    <string name="photo_load_error">Не удалось загрузить изображение</string>
</resources>